# DataSemAgent

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
app/: config.py  exceptions.py  flow.py  llm.py  logger.py  schema.py
app/benchmark/: __init__.py  base.py  config.py
app/cli/: __init__.py  __main__.py  app.py  console.py  i18n.py
app/db/: base.py  graph.py
app/eval/: __init__.py  collector.py
app/hook/: __init__.py  decorator.py  registry.py
app/mcp/: __init__.py  client.py  config.py  registry.py
app/memory/: __init__.py  compressor.py  hook.py  token_counter.py
app/node/: __init__.py  agent.py  base.py  tool.py
app/pipeline/: __init__.py  abc.py  queue_pipeline.py
app/prompt/: react_agent.py
app/semantics/: models.py
app/skill/: __init__.py  base.py
app/tool/: base.py  entity_graph.py  mcp.py  metric_graph.py  reasoning_graph.py  skill.py  sql_exec.py  todo_write.py
app/util/: __init__.py  enums.py
config/: agent.toml  config.toml  database.toml  eval.toml  graph_database.toml
config/benchmark/: agent.toml  bird_database.toml  config.toml  (+3 more)
tests/: build_tpcds_test_data.py  test_cli_console.py  test_cli_i18n.py  test_compression_hook.py  test_context_compressor.py  test_entity_graph.py  test_eval_collector.py  test_eval_span_format.py  test_graph_pipeline.py  test_hook.py  test_hook_registry.py  test_memory_token_cache.py  test_message_factory.py  test_reasoning_builder.py  test_reasoning_contract.py  test_reasoning_merger.py  test_reasoning_tools.py  test_sql_pushdown.py  test_sql_validator.py  test_token_counter.py
(+59 files in other folders)
