[project]
name = "datasemagent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite==0.22.1",
    "fastmcp==3.2.4",
    "loguru==0.7.3",
    "openai==2.33.0",
    "pocketflow==0.0.3",
    "kuzu>=0.9.0",
    "pydantic==2.12.5",
    "pyyaml>=6.0.3",
    "sqlglot[rs]==28.10.1",
    "sqlglotrs==0.12.0",
    "tenacity==9.1.4",
    "tiktoken==0.12.0",
    "anthropic>=0.97.0",
    "typer>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
